--- a/index.html
+++ b/index.html
@@ -1,14 +1,14 @@
 <!DOCTYPE html>
 <html lang="en">
-<HEAD>
+<head>
 <meta charset="UTF-8">
 <meta name="viewport" content="width=device-width, initial-scale=1.0">
 <link rel="preconnect" href="https://fonts.googleapis.com">
 <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
 <link href="https://fonts.googleapis.com/css2?family=Lato:wght@300;400;700&display=swap" rel="stylesheet">
-<link rel="stylesheet" href="style.css" type="text/css" MEDIA="screen" charset="utf-8">
+<link rel="stylesheet" href="style.css" type="text/css" media="screen" charset="utf-8">
 <title>Todo App</title>
-</HEAD>
+</head>
 <body>
 <div class="aaa"><img src="./eisenhower-matrix.jpg"><a class='more_inf' href="https://goal-life.com/page/method/matrix-eisenhower">Want more details&quest;</a></div>
 <div class="centered-main-page-element"><p id='topSectionForAddingElementToList'><label for="new-task">Add Item</label><div class="task-row-wrapper"><input id='new-task'class="task" type="text"><button>Add</button></div>
@@ -20,6 +20,6 @@
 </li>
 </ul>
 </div>
-<script type="text/javascript" SRC="app.js"></script>
+<script type="text/javascript" src="app.js"></script>
 </body>
 </html>
