--- a/index.html
+++ b/index.html
@@ -6,7 +6,7 @@
 <link rel="preconnect" href="https://fonts.googleapis.com">
 <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
 <link href="https://fonts.googleapis.com/css2?family=Lato:wght@300;400;700&display=swap" rel="stylesheet">
-<link rel="stylesheet" href="style.css" type="text/css" media="screen" charset="utf-8">
+<link href="style.css">
 <title>Todo App</title>
 </head>
 <body>
@@ -20,6 +20,6 @@
 </li>
 </ul>
 </div>
-<script type="text/javascript" src="app.js"></script>
+<script src="app.js"></script>
 </body>
 </html>
