--- a/index.html
+++ b/index.html
@@ -12,7 +12,7 @@
 <body>
   <section class="contant"> 
     <div class="container">
-      <img src="./eisenhower-matrix.jpg">
+      <img src="./eisenhower-matrix.jpg" alt="The Eisenhower matrix">
       <a class="more_inf" href="https://goal-life.com/page/method/matrix-eisenhower">Want more details?</a>
     </div>
   </section>
