--- a/index.html
+++ b/index.html
@@ -12,49 +12,49 @@
 <body>
   <section class="contant">
     <div class="container">
-      <img src="./eisenhower-matrix.jpg" alt="The Eisenhower matrix">
-      <a class="more_inf" href="https://goal-life.com/page/method/matrix-eisenhower">Want more details?</a>
+      <img  class="contant-img" src="eisenhower-matrix.jpg" alt="The Eisenhower matrix" width="500" height="250">
+      <a class="contant-more-info" href="https://goal-life.com/page/method/matrix-eisenhower" target="_blank" rel="noopener noreferrer">Want more details?</a>
     </div>
   </section>
   <section class="functions">
     <div class="container">
-      <div class="centered-main-page-element">
-        <label for="new-task">Add Item</label>
-        <div class="task-row-wrapper">
-          <input id="new-task"class="task" type="text">
-          <button>Add</button>
+      <div id="add-task">
+        <label class="new-task" for="new-task">Add Item</label>
+        <div class="add-wrap">
+          <input class="input-task tasks" id="new-task"  type="text">
+          <button class="add-btn btn">Add</button>
         </div>
       </div>
-      <h3>Todo</h3>
-      <ul id="incompleteTasks">
-        <li>
-          <input type="checkbox">
-          <label class="task">Pay Bills</label>
-          <input type="text" class="task">
-          <button class="edit">Edit</button>
-          <button class="delete">
-            <img src="./remove.svg">
+      <h3 class="title">Todo</h3>
+      <ul class="task-wrap" id="incomplete-tasks">
+        <li class="tasks-item">
+          <input class="checkbox" type="checkbox">
+          <label class="tasks">Pay Bills</label>
+          <input class="input-task edit" type="text">
+          <button class="edit-btn btn">Edit</button>
+          <button class="delete-btn btn">
+            <img class="delete-btn-img" src="remove.svg">
           </button>
         </li>
-        <li class="editMode">
-          <input type="checkbox">
-          <label class="task">Go Shopping</label>
-          <input type="text" value="Go Shopping" class="task">
-          <button class="edit">Save</button>
-          <button class="delete">
-            <img src="./remove.svg">
+        <li class="tasks-item edit-mode">
+          <input class="checkbox" type="checkbox">
+          <label class="tasks">Go Shopping</label>
+          <input class="input-task edit" type="text" value="Go Shopping">
+          <button class="edit-btn btn">Save</button>
+          <button class="delete-btn btn">
+            <img class="delete-btn-img" src="remove.svg">
           </button>
         </li>
       </ul>
-      <h3>Completed</h3>
-      <ul id="completed-tasks">
-        <li>
-          <input type="checkbox" checked>
-          <label class="task">See the Doctor</label>
-          <input type="text" class="task">
-          <button class="edit">Edit</button>
-          <button class="delete">
-            <img src="./remove.svg">
+      <h3 class="title">Completed</h3>
+      <ul class="task-wrap" id="completed-tasks">
+        <li class="tasks-item">
+          <input class="checkbox" type="checkbox" checked>
+          <label class="tasks">See the Doctor</label>
+          <input class="input-task edit" type="text">
+          <button class="edit-btn btn">Edit</button>
+          <button class="delete-btn btn">
+            <img class="delete-btn-img"src="remove.svg">
           </button>
         </li>
       </ul>
