fix(basic-2.5.): add HTML line-wrapping

--- a/index.html
+++ b/index.html
@@ -12,8 +12,18 @@
 <body>
   <section class="contant"> 
     <div class="container">
-      <img  class="contant-img" src="eisenhower-matrix.jpg" alt="The Eisenhower matrix" width="500" height="250">
-      <a class="contant-more-info" href="https://goal-life.com/page/method/matrix-eisenhower" target="_blank" rel="noopener noreferrer">Want more details?</a>
+      <img  
+        class="contant-img" 
+        src="eisenhower-matrix.jpg" 
+        alt="The Eisenhower matrix" 
+        width="500" 
+        height="250">
+      <a 
+        class="contant-more-info" 
+        href="https://goal-life.com/page/method/matrix-eisenhower" 
+        target="_blank" 
+        rel="noopener noreferrer">Want more details?
+      </a>
     </div>
   </section>
   <section class="functions">
@@ -21,7 +31,7 @@
       <div id="add-task">
         <label class="new-task" for="new-task">Add Item</label>
         <div class="add-wrap">
-          <input class="input-task tasks" id="new-task"  type="text">
+          <input class="input-task tasks" id="new-task" type="text">
           <button class="add-btn btn">Add</button>
         </div>
       </div>
@@ -54,7 +64,7 @@
           <input class="input-task edit" type="text">
           <button class="edit-btn btn">Edit</button>
           <button class="delete-btn btn">
-            <img class="delete-btn-img"src="remove.svg">
+            <img class="delete-btn-img" src="remove.svg">
           </button>
         </li>
       </ul>
