fix(basic-3.4.): fit tegs on class and id file CSS

--- a/index.html
+++ b/index.html
@@ -9,8 +9,8 @@
   <link href="style.css">
   <title>Todo App</title>
 </head>
-<body>
-  <section class="contant"> 
+<body class="body">
+  <section class="contant">
     <div class="container">
       <img  
         class="contant-img" 
