--- a/index.html
+++ b/index.html
@@ -10,10 +10,13 @@
   <title>Todo App</title>
 </head>
 <body>
+  <section class="contant"> 
     <div class="container">
       <img src="./eisenhower-matrix.jpg">
       <a class="more_inf" href="https://goal-life.com/page/method/matrix-eisenhower">Want more details?</a>
     </div>
+  </section>
+  <section class="functions">
     <div class="container">
       <div class="centered-main-page-element">
         <label for="new-task">Add Item</label>
@@ -56,6 +59,7 @@
         </li>
       </ul>
     </div>
+  </section>
 <script src="app.js"></script>
 </body>
 </html>
