--- a/index.html
+++ b/index.html
@@ -6,7 +6,7 @@
   <link rel="preconnect" href="https://fonts.googleapis.com">
   <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
   <link href="https://fonts.googleapis.com/css2?family=Lato:wght@300;400;700&display=swap" rel="stylesheet">
-  <link rel="stylesheet" href="style_1.css">
+  <link rel="stylesheet" href="style.css">
   <title>Todo App</title>
 </head>
 <body>
@@ -64,6 +64,6 @@
       </ul>
     </div>
   </section>
-  <script src="app_1.js"></script>
+  <script src="app.js"></script>
 </body>
 </html>
